--- a/languages/fr_FR.po
+++ b/languages/fr_FR.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: My Portfolio 2022\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-09-18 22:03+0000\n"
-"PO-Revision-Date: 2022-09-18 22:44+0000\n"
+"PO-Revision-Date: 2022-09-18 23:09+0000\n"
 "Last-Translator: \n"
 "Language-Team: Français\n"
 "Language: fr_FR\n"
@@ -14,6 +14,25 @@ msgstr ""
 "X-Generator: Loco https://localise.biz/\n"
 "X-Loco-Version: 2.6.2; wp-6.0.2\n"
 "X-Domain: MyWork"
+
+#: inc/options-theme/OP_Profile/02-media.php:128
+msgid "Ajouter les différentes photos de votre Portfolio"
+msgstr ""
+"Ajouter les différentes photos de votre Portfolio\n"
+"\n"
+
+#. SLUG_FIELD
+#: inc/options-theme/OP_Profile/02-media.php:109
+msgid "Ajouter les medias"
+msgstr ""
+"Ajouter les médias\n"
+"\n"
+
+#: inc/options-theme/OP_Profile/02-media.php:199
+#: inc/options-theme/OP_Profile/02-media.php:216
+#: inc/options-theme/OP_Profile/02-media.php:233
+msgid "Aperçu :"
+msgstr "Aperçu :"
 
 #. SLUG_FIELD
 #: inc/options-theme/OP_Profile/01-personalDetails.php:120
@@ -51,10 +70,38 @@ msgstr "La localité"
 msgid "Localité"
 msgstr "Localité"
 
+#: inc/options-theme/OP_Profile/02-media.php:214
+#: inc/options-theme/OP_Profile/02-media.php:218
+msgid "Ma photo d'avatar"
+msgstr "Ma photo d'avatar"
+
+#: inc/options-theme/OP_Profile/02-media.php:197
+#: inc/options-theme/OP_Profile/02-media.php:201
+msgid "Ma photo de profile"
+msgstr "Ma photo de profile"
+
 #. SLUG_SECTION
 #: inc/options-theme/OP_Profile/01-personalDetails.php:142
 msgid "Mes coordonnés"
 msgstr "Mes coordonnés"
+
+#. slug parent
+#. page_title
+#: inc/options-theme/OP_Profile/02-media.php:55
+#: inc/options-theme/OP_Profile/02-media.php:56
+#: inc/options-theme/OP_Profile/02-media.php:69
+msgid "Mes médias"
+msgstr "Mes médias"
+
+#. SLUG_SECTION
+#: inc/options-theme/OP_Profile/02-media.php:101
+msgid "Mes photos"
+msgstr "Mes photos"
+
+#: inc/options-theme/OP_Profile/02-media.php:231
+#: inc/options-theme/OP_Profile/02-media.php:235
+msgid "Mon logo"
+msgstr "Mon logo"
 
 #. TITLE_PAGE
 #: inc/options-theme/OP_Profile/01-personalDetails.php:57
@@ -106,6 +153,12 @@ msgid "Section dédiée à la traduction du post"
 msgstr ""
 "Section dédiée à la traduction du post\n"
 "\n"
+
+#: inc/options-theme/OP_Profile/02-media.php:71
+msgid ""
+"Sur cette page vous pouvez gérer les différents médias de votre portfolio"
+msgstr ""
+"Sur cette page vous pouvez gérer les différents médias de votre portfolio"
 
 #: inc/options-theme/OP_Profile/01-personalDetails.php:75
 msgid "Sur cette page vous pouvez gérer vos inforation personnel"
