--- a/languages/fr_FR.po
+++ b/languages/fr_FR.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: My Portfolio 2022\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-09-18 22:03+0000\n"
-"PO-Revision-Date: 2022-09-18 23:09+0000\n"
+"PO-Revision-Date: 2022-09-19 11:32+0000\n"
 "Last-Translator: \n"
 "Language-Team: Français\n"
 "Language: fr_FR\n"
@@ -35,6 +35,15 @@ msgid "Aperçu :"
 msgstr "Aperçu :"
 
 #. SLUG_FIELD
+#: inc/options-theme/OP_Profile/03-network.php:141
+msgid "Behance"
+msgstr "Behance"
+
+#: inc/options-theme/OP_Profile/03-network.php:187
+msgid "Cocher et ajouter l'url de vos réseaux sociaux"
+msgstr "Coucher et ajouter l'URL de vos réseaux sociaux"
+
+#. SLUG_FIELD
 #: inc/options-theme/OP_Profile/01-personalDetails.php:120
 msgid "Date de naissance"
 msgstr "Date de naissance"
@@ -53,6 +62,18 @@ msgstr "Email"
 msgid "Enza Lombardo"
 msgstr "Enza Lombardo"
 
+#. SLUG_FIELD
+#: inc/options-theme/OP_Profile/03-network.php:109
+msgid "Facebook"
+msgstr ""
+"Facebook\n"
+
+#. SLUG_FIELD
+#: inc/options-theme/OP_Profile/03-network.php:149
+msgid "GitHub"
+msgstr ""
+"GitHub\n"
+
 #. Author URI of the theme
 msgid "https://enzalombardo.be"
 msgstr "https://enzalombardo.be"
@@ -61,9 +82,21 @@ msgstr "https://enzalombardo.be"
 msgid "https://enzawebdev.be/"
 msgstr "https://enzawebdev.be/"
 
+#. SLUG_FIELD
+#: inc/options-theme/OP_Profile/03-network.php:125
+msgid "Instagram"
+msgstr ""
+"Instagram\n"
+
 #: inc/options-theme/OP_Profile/01-personalDetails.php:291
 msgid "La localité"
 msgstr "La localité"
+
+#. SLUG_FIELD
+#: inc/options-theme/OP_Profile/03-network.php:133
+msgid "LinkedIn"
+msgstr ""
+"LinkedIn\n"
 
 #. SLUG_FIELD
 #: inc/options-theme/OP_Profile/01-personalDetails.php:150
@@ -97,6 +130,20 @@ msgstr "Mes médias"
 #: inc/options-theme/OP_Profile/02-media.php:101
 msgid "Mes photos"
 msgstr "Mes photos"
+
+#. slug parent
+#. page_title
+#: inc/options-theme/OP_Profile/03-network.php:55
+#: inc/options-theme/OP_Profile/03-network.php:56
+msgid "Mes réseaux"
+msgstr "Mes réseaux"
+
+#. SLUG_SECTION
+#: inc/options-theme/OP_Profile/03-network.php:69
+#: inc/options-theme/OP_Profile/03-network.php:101
+msgid "Mes réseaux sociaux"
+msgstr ""
+"Mes réseaux sociaux\n"
 
 #: inc/options-theme/OP_Profile/02-media.php:231
 #: inc/options-theme/OP_Profile/02-media.php:235
@@ -154,11 +201,21 @@ msgstr ""
 "Section dédiée à la traduction du post\n"
 "\n"
 
+#. SLUG_FIELD
+#: inc/options-theme/OP_Profile/03-network.php:157
+msgid "Site Web"
+msgstr ""
+"Site Web\n"
+
 #: inc/options-theme/OP_Profile/02-media.php:71
 msgid ""
 "Sur cette page vous pouvez gérer les différents médias de votre portfolio"
 msgstr ""
 "Sur cette page vous pouvez gérer les différents médias de votre portfolio"
+
+#: inc/options-theme/OP_Profile/03-network.php:71
+msgid "Sur cette page vous pouvez gérer les url de vos réseaux sociaux"
+msgstr "Sur cette page vous pouvez gérer les URL de vos réseaux sociaux"
 
 #: inc/options-theme/OP_Profile/01-personalDetails.php:75
 msgid "Sur cette page vous pouvez gérer vos inforation personnel"
@@ -188,6 +245,11 @@ msgstr ""
 #: inc/options-theme/OP_Profile/01-personalDetails.php:364
 msgid "Titre du poste en italien"
 msgstr "Titre du poste en italien"
+
+#. SLUG_FIELD
+#: inc/options-theme/OP_Profile/03-network.php:117
+msgid "Twitter"
+msgstr "Twitter"
 
 #. SLUG_FIELD
 #: inc/options-theme/OP_Profile/01-personalDetails.php:164
