:globe_with_meridians: add translate part 4

--- a/languages/fr_FR.po
+++ b/languages/fr_FR.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: My Portfolio 2022\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-09-18 22:03+0000\n"
-"PO-Revision-Date: 2022-09-19 11:32+0000\n"
+"PO-Revision-Date: 2022-09-19 14:55+0000\n"
 "Last-Translator: \n"
 "Language-Team: Français\n"
 "Language: fr_FR\n"
@@ -14,6 +14,13 @@ msgstr ""
 "X-Generator: Loco https://localise.biz/\n"
 "X-Loco-Version: 2.6.2; wp-6.0.2\n"
 "X-Domain: MyWork"
+
+#. slug parent
+#. page_title
+#: inc/options-theme/OP_Profile/04-aboutme.php:57
+#: inc/options-theme/OP_Profile/04-aboutme.php:58
+msgid "About me"
+msgstr "À propos de moi"
 
 #: inc/options-theme/OP_Profile/02-media.php:128
 msgid "Ajouter les différentes photos de votre Portfolio"
@@ -43,6 +50,17 @@ msgstr "Behance"
 msgid "Cocher et ajouter l'url de vos réseaux sociaux"
 msgstr "Coucher et ajouter l'URL de vos réseaux sociaux"
 
+#. slug parent
+#. page_title
+#: inc/options-theme/OP_Profile/05-curriculum.php:56
+#: inc/options-theme/OP_Profile/05-curriculum.php:57
+msgid "Curriculum"
+msgstr "Curriculum"
+
+#: inc/options-theme/OP_Profile/05-curriculum.php:70
+msgid "Curriculum Vitae"
+msgstr "Curriculum Vitae"
+
 #. SLUG_FIELD
 #: inc/options-theme/OP_Profile/01-personalDetails.php:120
 msgid "Date de naissance"
@@ -68,6 +86,23 @@ msgid "Facebook"
 msgstr ""
 "Facebook\n"
 
+#: inc/options-theme/OP_Profile/05-curriculum.php:189
+#: inc/options-theme/OP_Profile/04-aboutme.php:216
+msgid "Gestion de la section en anglais"
+msgstr ""
+"Gestion de la section en anglais\n"
+
+#: inc/options-theme/OP_Profile/05-curriculum.php:181
+#: inc/options-theme/OP_Profile/04-aboutme.php:208
+msgid "Gestion de la section en français"
+msgstr ""
+"Gestion de la section en français\n"
+
+#: inc/options-theme/OP_Profile/05-curriculum.php:197
+#: inc/options-theme/OP_Profile/04-aboutme.php:224
+msgid "Gestion de la section en italien"
+msgstr "Gestion de la section en italien"
+
 #. SLUG_FIELD
 #: inc/options-theme/OP_Profile/03-network.php:149
 msgid "GitHub"
@@ -81,6 +116,13 @@ msgstr "https://enzalombardo.be"
 #. URI of the theme
 msgid "https://enzawebdev.be/"
 msgstr "https://enzawebdev.be/"
+
+#. SLUG_FIELD
+#: inc/options-theme/OP_Profile/05-curriculum.php:110
+#: inc/options-theme/OP_Profile/05-curriculum.php:137
+#: inc/options-theme/OP_Profile/05-curriculum.php:164
+msgid "Importer mon CV"
+msgstr "Importer mon CV"
 
 #. SLUG_FIELD
 #: inc/options-theme/OP_Profile/03-network.php:125
@@ -174,6 +216,20 @@ msgstr "Nom"
 msgid "Nom complet"
 msgstr "Nom complet"
 
+#. SLUG_FIELD
+#: inc/options-theme/OP_Profile/04-aboutme.php:118
+#: inc/options-theme/OP_Profile/04-aboutme.php:154
+#: inc/options-theme/OP_Profile/04-aboutme.php:190
+msgid "Parler de sois"
+msgstr "Parler de sois"
+
+#. SLUG_FIELD
+#: inc/options-theme/OP_Profile/04-aboutme.php:111
+#: inc/options-theme/OP_Profile/04-aboutme.php:147
+#: inc/options-theme/OP_Profile/04-aboutme.php:183
+msgid "Petit intro"
+msgstr "Petite intro"
+
 #. SLUG_SECTION
 #: inc/options-theme/OP_Profile/01-personalDetails.php:187
 msgid "Poste"
@@ -182,6 +238,23 @@ msgstr "Poste"
 #: inc/options-theme/OP_Profile/01-personalDetails.php:265
 msgid "Prénom"
 msgstr "Prénom"
+
+#. SLUG_SECTION
+#: inc/options-theme/OP_Profile/04-aboutme.php:139
+msgid "Qui suis-je ? (en anglais)"
+msgstr ""
+"Qui suis-je ? (en anglais)\n"
+
+#. SLUG_SECTION
+#: inc/options-theme/OP_Profile/04-aboutme.php:103
+msgid "Qui suis-je ? (en français)"
+msgstr ""
+"Qui suis-je ? (en français)\n"
+
+#. SLUG_SECTION
+#: inc/options-theme/OP_Profile/04-aboutme.php:175
+msgid "Qui suis-je ? (en italien)"
+msgstr "Qui suis-je ? (en italien)"
 
 #: inc/options-theme/OP_Profile/01-personalDetails.php:223
 msgid "Section dédiée aux informations de contact"
@@ -200,6 +273,23 @@ msgid "Section dédiée à la traduction du post"
 msgstr ""
 "Section dédiée à la traduction du post\n"
 "\n"
+
+#. SLUG_SECTION
+#: inc/options-theme/OP_Profile/05-curriculum.php:129
+msgid "Section en anglais"
+msgstr ""
+"Section en anglais\n"
+
+#. SLUG_SECTION
+#: inc/options-theme/OP_Profile/05-curriculum.php:102
+msgid "Section en français"
+msgstr ""
+"Section en français\n"
+
+#. SLUG_SECTION
+#: inc/options-theme/OP_Profile/05-curriculum.php:156
+msgid "Section en italien"
+msgstr "Section en italien"
 
 #. SLUG_FIELD
 #: inc/options-theme/OP_Profile/03-network.php:157
@@ -222,6 +312,14 @@ msgid "Sur cette page vous pouvez gérer vos inforation personnel"
 msgstr ""
 "Sur cette page vous pouvez gérer vos informations personnel\n"
 "\n"
+
+#: inc/options-theme/OP_Profile/05-curriculum.php:72
+msgid "Sur cette page, vous pouvez gérer l'import de votre CV"
+msgstr "Sur cette page, vous pouvez gérer l'import de votre CV"
+
+#: inc/options-theme/OP_Profile/04-aboutme.php:73
+msgid "Sur cette page, vous pouvez parler de vous"
+msgstr "Sur cette page, vous pouvez parler de vous"
 
 #. SLUG_FIELD
 #: inc/options-theme/OP_Profile/01-personalDetails.php:195
@@ -257,3 +355,7 @@ msgid "Téléphone"
 msgstr ""
 "Téléphone\n"
 "\n"
+
+#: inc/options-theme/OP_Profile/04-aboutme.php:71
+msgid "À propos de moi"
+msgstr "À propos de moi"
