--- a/languages/it_IT.po
+++ b/languages/it_IT.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: My Portfolio 2022\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-09-18 22:03+0000\n"
-"PO-Revision-Date: 2022-09-19 11:40+0000\n"
+"PO-Revision-Date: 2022-09-19 15:20+0000\n"
 "Last-Translator: \n"
 "Language-Team: Italian\n"
 "Language: it_IT\n"
@@ -14,6 +14,13 @@ msgstr ""
 "X-Generator: Loco https://localise.biz/\n"
 "X-Loco-Version: 2.6.2; wp-6.0.2\n"
 "X-Domain: MyWork"
+
+#. slug parent
+#. page_title
+#: inc/options-theme/OP_Profile/04-aboutme.php:57
+#: inc/options-theme/OP_Profile/04-aboutme.php:58
+msgid "About me"
+msgstr "Su di me"
 
 #: inc/options-theme/OP_Profile/02-media.php:128
 msgid "Ajouter les différentes photos de votre Portfolio"
@@ -38,6 +45,17 @@ msgstr "Behance"
 #: inc/options-theme/OP_Profile/03-network.php:187
 msgid "Cocher et ajouter l'url de vos réseaux sociaux"
 msgstr "Spunta e aggiungi l'URL dei tuoi social network"
+
+#. slug parent
+#. page_title
+#: inc/options-theme/OP_Profile/05-curriculum.php:56
+#: inc/options-theme/OP_Profile/05-curriculum.php:57
+msgid "Curriculum"
+msgstr "Curriculum"
+
+#: inc/options-theme/OP_Profile/05-curriculum.php:70
+msgid "Curriculum Vitae"
+msgstr "Curriculum Vitae"
 
 #. SLUG_FIELD
 #: inc/options-theme/OP_Profile/01-personalDetails.php:120
@@ -68,6 +86,23 @@ msgid "Facebook"
 msgstr ""
 "Facebook\n"
 
+#: inc/options-theme/OP_Profile/05-curriculum.php:189
+#: inc/options-theme/OP_Profile/04-aboutme.php:216
+msgid "Gestion de la section en anglais"
+msgstr ""
+"Gestione della sezione inglese\n"
+
+#: inc/options-theme/OP_Profile/05-curriculum.php:181
+#: inc/options-theme/OP_Profile/04-aboutme.php:208
+msgid "Gestion de la section en français"
+msgstr ""
+"Gestione della sezione francese\n"
+
+#: inc/options-theme/OP_Profile/05-curriculum.php:197
+#: inc/options-theme/OP_Profile/04-aboutme.php:224
+msgid "Gestion de la section en italien"
+msgstr "Gestione della sezione italiana"
+
 #. SLUG_FIELD
 #: inc/options-theme/OP_Profile/03-network.php:149
 msgid "GitHub"
@@ -83,6 +118,13 @@ msgstr ""
 msgid "https://enzawebdev.be/"
 msgstr ""
 "https://enzawebdev.be/\n"
+
+#. SLUG_FIELD
+#: inc/options-theme/OP_Profile/05-curriculum.php:110
+#: inc/options-theme/OP_Profile/05-curriculum.php:137
+#: inc/options-theme/OP_Profile/05-curriculum.php:164
+msgid "Importer mon CV"
+msgstr "Importare il mio CV"
 
 #. SLUG_FIELD
 #: inc/options-theme/OP_Profile/03-network.php:125
@@ -183,6 +225,20 @@ msgid "Nom complet"
 msgstr ""
 "Nome completo\n"
 
+#. SLUG_FIELD
+#: inc/options-theme/OP_Profile/04-aboutme.php:118
+#: inc/options-theme/OP_Profile/04-aboutme.php:154
+#: inc/options-theme/OP_Profile/04-aboutme.php:190
+msgid "Parler de sois"
+msgstr "Parlare di sé"
+
+#. SLUG_FIELD
+#: inc/options-theme/OP_Profile/04-aboutme.php:111
+#: inc/options-theme/OP_Profile/04-aboutme.php:147
+#: inc/options-theme/OP_Profile/04-aboutme.php:183
+msgid "Petit intro"
+msgstr "Breve introduzione"
+
 #. SLUG_SECTION
 #: inc/options-theme/OP_Profile/01-personalDetails.php:187
 msgid "Poste"
@@ -191,6 +247,23 @@ msgstr "Lavoro"
 #: inc/options-theme/OP_Profile/01-personalDetails.php:265
 msgid "Prénom"
 msgstr "Nome"
+
+#. SLUG_SECTION
+#: inc/options-theme/OP_Profile/04-aboutme.php:139
+msgid "Qui suis-je ? (en anglais)"
+msgstr ""
+"Chi sono (in inglese)\n"
+
+#. SLUG_SECTION
+#: inc/options-theme/OP_Profile/04-aboutme.php:103
+msgid "Qui suis-je ? (en français)"
+msgstr ""
+"Chi sono (in francese)\n"
+
+#. SLUG_SECTION
+#: inc/options-theme/OP_Profile/04-aboutme.php:175
+msgid "Qui suis-je ? (en italien)"
+msgstr "Chi sono (in italiano)"
 
 #: inc/options-theme/OP_Profile/01-personalDetails.php:223
 msgid "Section dédiée aux informations de contact"
@@ -207,6 +280,23 @@ msgid "Section dédiée à la traduction du post"
 msgstr ""
 "Sezione dedicata alla traduzione del lavoro\n"
 "\n"
+
+#. SLUG_SECTION
+#: inc/options-theme/OP_Profile/05-curriculum.php:129
+msgid "Section en anglais"
+msgstr ""
+"Sezione inglese\n"
+
+#. SLUG_SECTION
+#: inc/options-theme/OP_Profile/05-curriculum.php:102
+msgid "Section en français"
+msgstr ""
+"Sezione francese\n"
+
+#. SLUG_SECTION
+#: inc/options-theme/OP_Profile/05-curriculum.php:156
+msgid "Section en italien"
+msgstr "Sezione italiana"
 
 #. SLUG_FIELD
 #: inc/options-theme/OP_Profile/03-network.php:157
@@ -227,6 +317,14 @@ msgid "Sur cette page vous pouvez gérer vos inforation personnel"
 msgstr ""
 "In questa pagina è possibile gestire i propri dati personali\n"
 "\n"
+
+#: inc/options-theme/OP_Profile/05-curriculum.php:72
+msgid "Sur cette page, vous pouvez gérer l'import de votre CV"
+msgstr "In questa pagina è possibile gestire l'importazione del proprio CV"
+
+#: inc/options-theme/OP_Profile/04-aboutme.php:73
+msgid "Sur cette page, vous pouvez parler de vous"
+msgstr "In questa pagina potete parlare di voi stessi"
 
 #. SLUG_FIELD
 #: inc/options-theme/OP_Profile/01-personalDetails.php:195
@@ -261,3 +359,7 @@ msgid "Téléphone"
 msgstr ""
 "Telefono\n"
 "\n"
+
+#: inc/options-theme/OP_Profile/04-aboutme.php:71
+msgid "À propos de moi"
+msgstr "Su di me"
